# robotic_brain

./: README.md  pyproject.toml  setup.py
configs/: agents.yaml  model_service.yaml  robot_profiles.yaml  safety_limits.yaml  skills.yaml  vlm_service.yaml
docs/: codebase_walkthrough_and_extension_guide.md  multi_agent_vlm_robot_brain_architecture.md  open_robot_brain_architecture.md  project_tree.md  real_robot_brain_migration.md
scripts/: check_ollama_vision.sh  run_local_demo.sh  setup_dev_env.sh
src/robot_brain/: __init__.py  __main__.py  demo.py
src/robot_brain/agents/: __init__.py  audio_agent.py  base.py  human_interaction_agent.py  proprioception_agent.py  spatial_agent.py  vision_agent.py
src/robot_brain/blackboard/: __init__.py  event_bus.py
src/robot_brain/brain/: __init__.py  behavior_planner.py  safety_supervisor.py  task_planner.py  world_model.py
src/robot_brain/cognitive/: __init__.py  base.py  dialogue_agent.py  planning_agent.py  reflection_learning_agent.py  safety_review_agent.py  scene_reasoning_agent.py  skill_routing_agent.py  task_parsing_agent.py
src/robot_brain/config/: __init__.py  robot_profile.py
src/robot_brain/control/: __init__.py  interfaces.py  robot_bridge.py
src/robot_brain/core/: __init__.py  messages.py
src/robot_brain/decision_models/: __init__.py  parallel_action_head.py
src/robot_brain/evaluation/: __init__.py
src/robot_brain/executive/: __init__.py  adaptive_router.py  (+7 more)
tests/unit/: test_demo.py  test_learning_loop.py  test_robot_profile_planning.py  test_skill_executor.py  test_world_model.py
(+52 files in other folders)
